--- a/easeui/src/main/res/layout/ease_widget_chat_primary_menu.xml
+++ b/easeui/src/main/res/layout/ease_widget_chat_primary_menu.xml
@@ -57,7 +57,24 @@
                 android:textColor="#666666"
                 android:textSize="16sp" />
         </LinearLayout>
-
+        <RelativeLayout
+            android:id="@+id/edittext_layout_hint"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="gone">
+            <TextView
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:id="@+id/et_sendmessage_hint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="40dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/ease_chat_press_speak_btn"
+                android:text="您已被禁言"
+                android:gravity="center"/>
+        </RelativeLayout>
         <RelativeLayout
             android:id="@+id/edittext_layout"
             android:layout_width="0dp"
