--- a/baseproject/src/main/res/values/dimens_tsp_spacing.xml
+++ b/baseproject/src/main/res/values/dimens_tsp_spacing.xml
@@ -14,6 +14,7 @@
     <dimen name="spacing_mid">15dp</dimen>
     <dimen name="spacing_mid_offset">13dp</dimen>
     <dimen name="spacing_normal_8dp">8dp</dimen>
+    <dimen name="spacing_normal_18dp">18dp</dimen>
     <dimen name="spacing_normal">10dp</dimen>
     <dimen name="spacing_mid_small">7dp</dimen>
     <dimen name="spacing_mid_small_8dp">8dp</dimen>
