增加邀请分享功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,10 @@
     <!--问答匿名选项颜色-->
     <color name="qa_anonymity_color">#FBFBFB</color>
     <color name="search_box_bg_color">#f4f5f5</color>
+
+    <!--邀请分享-->
+    <color name="invite_share_main">#564626</color>
+    <color name="invite_share_light">#6e5f15</color>
+    <color name="invite_share_gray">#36444d</color>
+    
 </resources>
