--- a/app/src/main/res/layout/item_group_list.xml
+++ b/app/src/main/res/layout/item_group_list.xml
@@ -7,18 +7,30 @@
     android:orientation="vertical"
     android:paddingLeft="@dimen/spacing_mid">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/circle_detail_head_iamge_height"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <com.zhiyicx.baseproject.widget.imageview.FilterImageView
-            android:id="@+id/uv_group_head"
+        <FrameLayout
             android:layout_width="@dimen/circle_member_head"
             android:layout_height="@dimen/circle_member_head"
-            android:layout_marginRight="@dimen/spacing_mid" />
+            android:layout_marginRight="@dimen/spacing_mid" >
+
+            <com.zhiyicx.baseproject.widget.imageview.FilterImageView
+                android:id="@+id/uv_group_head"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            
+            <ImageView
+                android:id="@+id/iv_group_sign"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"/>
+            
+        </FrameLayout>
 
         <TextView
             android:id="@+id/tv_group_name"
