修改聊天界面跳转到群详情界面传值bug

--- a/app/src/main/res/layout/fragment_chat_info.xml
+++ b/app/src/main/res/layout/fragment_chat_info.xml
@@ -526,7 +526,7 @@
 
             <!--清空记录-->
             <TextView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/tv_clear_message"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/chat_info_header_view_width"
