--- a/app/src/main/res/layout/item_message_list.xml
+++ b/app/src/main/res/layout/item_message_list.xml
@@ -49,6 +49,7 @@
 
             <ImageView
                 android:id="@+id/iv_group_sign"
+                android:visibility="invisible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"/>
