--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -15,11 +15,13 @@
     <dimen name="dp35">35dp</dimen>
     <dimen name="dp36">36dp</dimen>
     <dimen name="dp40">40dp</dimen>
+    <dimen name="dp45">45dp</dimen>
     <dimen name="dp50">50dp</dimen>
     <dimen name="dp60">60dp</dimen>
     <dimen name="dp80">80dp</dimen>
     <dimen name="dp90">90dp</dimen>
     <dimen name="dp100">100dp</dimen>
+    <dimen name="dp120">120dp</dimen>
     <dimen name="dp140">140dp</dimen>
     <dimen name="dp180">180dp</dimen>
     <dimen name="dp6">6dp</dimen>
