--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -9,15 +9,18 @@
     <dimen name="dp10">10dp</dimen>
     <dimen name="dp12">12dp</dimen>
     <dimen name="dp14">14dp</dimen>
+    <dimen name="dp16">16dp</dimen>
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp25">25dp</dimen>
     <dimen name="dp30">30dp</dimen>
+    <dimen name="dp32">32dp</dimen>
     <dimen name="dp35">35dp</dimen>
     <dimen name="dp36">36dp</dimen>
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp45">45dp</dimen>
     <dimen name="dp50">50dp</dimen>
     <dimen name="dp60">60dp</dimen>
+    <dimen name="dp66">66dp</dimen>
     <dimen name="dp80">80dp</dimen>
     <dimen name="dp90">90dp</dimen>
     <dimen name="dp100">100dp</dimen>
@@ -29,7 +32,10 @@
 
 
     <!--sp尺寸-->
+    <dimen name="sp10">10sp</dimen>
     <dimen name="sp13">13sp</dimen>
+    <dimen name="sp16">16sp</dimen>
+    <dimen name="sp12">12sp</dimen>
 
 
     <!-- photo view -->
