--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,5 +42,7 @@
     <color name="invite_share_gray">#36444d</color>
 
     <color name="message_top_bg">#F3F3F7</color>
+
+    <color name="market_red">#ff1231</color>
     
 </resources>
