--- a/baseproject/src/main/res/values/dimens.xml
+++ b/baseproject/src/main/res/values/dimens.xml
@@ -72,6 +72,7 @@
     <dimen name="margin_9">9dp</dimen>
     <dimen name="margin_12">12dp</dimen>
     <dimen name="ppw_center_width">250dp</dimen>
+    <dimen name="ppw_notice_width">300dp</dimen>
     <dimen name="ppw_center_scroll_height">220dp</dimen>
     <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_25">25dp</dimen>
