fix bug ：首页状态栏在5.0版本手机上展示异常 fix bug：首页资讯除推荐tab，其他tab栏展示异常

--- a/baseproject/src/main/res/layout/fragment_main_viewpager.xml
+++ b/baseproject/src/main/res/layout/fragment_main_viewpager.xml
@@ -9,6 +9,7 @@
         android:id="@+id/v_status_bar_placeholder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:background="@color/white"/>
 
     <com.zhiyicx.baseproject.widget.TabSelectView
