1.fix bug:会话列表在大量消息到来时，偶尔出现会话重复或者未读消息数量显示错误 2.fix bug:群相册列表无法加载更多 3.fix bug:查找聊天记录轮询到图片消息异常 4.增加删除群相册功能等

--- a/app/src/main/res/layout/fragment_no_scroll_viewpager.xml
+++ b/app/src/main/res/layout/fragment_no_scroll_viewpager.xml
@@ -5,13 +5,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <net.lucode.hackware.magicindicator.MagicIndicator
-        android:id="@+id/indicator"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:background="@color/white"
-        android:layout_height="@dimen/toolbar_with_tab_height">
+        android:layout_height="@dimen/toolbar_with_tab_height"
+        app:tabMode="scrollable"
+        app:tabIndicatorColor="@color/themeColor"
+        app:tabIndicatorHeight="@dimen/dp2"
+        app:tabTextColor="@color/text_color"
+        app:tabSelectedTextColor="@color/text_color_black">
 
-    </net.lucode.hackware.magicindicator.MagicIndicator>
+    </android.support.design.widget.TabLayout>
 
     <View
         style="@style/style_divider_horizontal"/>
