--- a/app/src/main/res/layout/item_market_currency.xml
+++ b/app/src/main/res/layout/item_market_currency.xml
@@ -5,6 +5,7 @@
     android:gravity="center_vertical">
 
     <RelativeLayout
+        android:paddingLeft="20dp"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content">
@@ -37,6 +38,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:paddingLeft="20dp"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
@@ -59,8 +61,10 @@
     </LinearLayout>
 
     <LinearLayout
+        android:paddingLeft="20dp"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:gravity="center_vertical"
         android:layout_height="wrap_content">
 
         <TextView
@@ -71,6 +75,7 @@
             android:background="@drawable/shape_radius_2dp_bg_red"/>
 
         <ImageView
+            android:padding="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/icon_stock_certificate"/>
