--- a/app/src/main/res/layout/item_setting_admin.xml
+++ b/app/src/main/res/layout/item_setting_admin.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/dp10"
-            android:text="@string/edit"
+            android:text="@string/delete"
             android:textColor="@color/important_for_content"
             android:textSize="@dimen/margin_16" />
     </LinearLayout>
